tests/semantic/valid/37_e_is_expr_ok.hulk
class Person(x:Number) { x:Number = x; }

let n = 1 in n is Person;
