tests/semantic/invalid/48_e_as_type_error.hulk
class Point(x:Number) {
    x:Number = x;
}
let p = 1 as Point in print(0);
